# vietocr

./: .gitignore  .gitlab-ci.yml  CHANGES.md  MANIFEST.in  Makefile  README.md  Run.ipynb  aug-viewer.py  datavisualizer.py  main.py  pyproject.toml  requiments.txt  requirements.txt  snippets.json  train.py
config/: base.yml  dev.yml  inception_ctc.yml  inception_s2s.yml  inception_v3_s2s.yml  mobilenet_v3_large.yml  mv3l_s2s.yml  resnet50_s2s.yml  svtr-t-ctc.yml  training.yml  vgg-seq2seq.yml  vgg-transformer.yml
config/backbones/: mobilenet_v3_large.yml
config/data/: vietocr-sample-dataset.yml
config/misc/: augment-no.yml
docs/src/: conf.py  index.rst  training.rst
experiment/: mobilenet-v3-seq2seq-vietocr-dataset.sh  mobilenet-v3-transformers-vietocr-dataset.sh
vietocr/: __init__.py  configs.py  const.py  dataloaders.py  images.py  metrics.py  models_onnx.py  requirement.txt  sample_images.py  tools.py  trainer.py  training.py
vietocr/augmentations/: __init__.py  bloom_filter.py  chromatic_abberation.py  custom_augmentations.py  fake_light.py  fbm_noise.py
vietocr/data/: __init__.old.py  __init__.py  dataset_dsrecord.py  samplers.py
vietocr/entrypoints/: data_viewer.ui  run_data_viewer.py
vietocr/loader/: aug.bak.py  aug.py  dataloader.py
vietocr/model/: losses.py  stn.py  trainer.bak.py  trainer.py  transformerocr.py  utils.py  vocab.py
vietocr/models/: __init__.py  backbone_fvtr.py  backbone_mlp_mixer.py  backbone_resnet.py  heads.py  losses.py  master.py  models_torch.py  optim.py  reversible.py  trainer.py
vietocr/old_codes/: dataloaders.py  (+4 more)
(+101 files in other folders)
